RESOLVED FIXED278351
Ensure callback is invoked when message check fails
https://bugs.webkit.org/show_bug.cgi?id=278351
Summary Ensure callback is invoked when message check fails
Sihui Liu
Reported 2024-08-19 14:52:02 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-19 14:54:55 PDT
Sihui Liu
Comment 2 2024-08-19 15:03:12 PDT
EWS
Comment 3 2024-08-19 20:01:24 PDT
Committed 282481@main (c5ed24cb854c): <https://commits.webkit.org/282481@main> Reviewed commits have been landed. Closing PR #32425 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.